crates/watt_tests/src/codegen/snapshots/watt_tests__codegen__simple__add_sub_mul_div_mod.snap
---
source: crates/watt_tests/src/codegen/simple.rs
expression: "\nfn main() {\n    let a = 10;\n    let b = 3;\n    let c = a + b;\n    let d = a - b;\n    let e = a * b;\n    let f = a / b;\n    let g = a % b;\n}\n        "
---
Source code:

fn main() {
    let a = 10;
    let b = 3;
    let c = a + b;
    let d = a - b;
    let e = a * b;
    let f = a / b;
    let g = a % b;
}
        

Generation result:
import {
    $$match,
    $$equals,
    $$todo,
    $$range,
    $$EqPattern,
    $$UnwrapPattern,
    $$WildcardPattern,
    $$BindPattern,
    $$VariantPattern,
} from "./prelude.js"

export function main() {
    let a = 10
    let b = 3
    let c = a + b
    let d = a - b
    let e = a * b
    let f = a / b
    let g = a % b
}
