crates/watt_tests/src/codegen/snapshots/watt_tests__codegen__simple__parens_expr.snap
---
source: crates/watt_tests/src/codegen/simple.rs
expression: "\nfn main() {\n    let a = (2 + 2) * 2;\n    let b = 3 * (4 + ((2 - 1)))\n}\n        "
---
Source code:

fn main() {
    let a = (2 + 2) * 2;
    let b = 3 * (4 + ((2 - 1)))
}
        

Generation result:
import {
    $$match,
    $$equals,
    $$todo,
    $$range,
    $$EqPattern,
    $$UnwrapPattern,
    $$WildcardPattern,
    $$BindPattern,
    $$VariantPattern,
} from "./prelude.js"

export function main() {
    let a = (2 + 2) * 2
    let b = 3 * (4 + ((2 - 1)))
}
