crates/watt_tests/src/codegen/snapshots/watt_tests__codegen__simple__simple_add_two_ints.snap
---
source: crates/watt_tests/src/codegen/simple.rs
expression: "\nfn main() {\n    let a = 3;\n    let b = 2;\n    let c = a + b;\n}\n        "
---
Source code:

fn main() {
    let a = 3;
    let b = 2;
    let c = a + b;
}
        

Generated js:
import {
    $$match,
    $$equals,
    $$todo,
    $$range,
    $$EqPattern,
    $$UnwrapPattern,
    $$WildcardPattern,
    $$BindPattern,
    $$VariantPattern,
} from "./prelude.js"

export function main() {
    let a = 3
    let b = 2
    let c = a + b
}
